tests/models/enum/unnamed/i32/pass/ge.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(ge = 2)]
        i32
    ),
}
fn main() {}
