tests/models/enum/unnamed/i32/fail/validate.rs
use dade::{model, Result};
#[model]
enum TestModel {
    Value(
       #[field(validate = validate_fn)]
        i32
    ),
}
fn main() {}
